Fixing val error nan

--- a/model.ipynb
+++ b/model.ipynb
@@ -36,26 +36,18 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Global seed set to 42\n"
-     ]
-    },
-    {
-     "ename": "TypeError",
-     "evalue": "FastMriDataModule.__init__() got an unexpected keyword argument 'only_annotated'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[2], line 89\u001b[0m\n\u001b[1;32m     86\u001b[0m test_transform \u001b[38;5;241m=\u001b[39m T\u001b[38;5;241m.\u001b[39mUnetDataTransform(configs[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mchallenge\u001b[39m\u001b[38;5;124m'\u001b[39m])\n\u001b[1;32m     88\u001b[0m \u001b[38;5;66;03m# create a data module\u001b[39;00m\n\u001b[0;32m---> 89\u001b[0m data_module \u001b[38;5;241m=\u001b[39m \u001b[43mFastMriDataModule\u001b[49m\u001b[43m(\u001b[49m\n\u001b[1;32m     90\u001b[0m \u001b[43m    \u001b[49m\u001b[43mdata_path\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mconfigs\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mdata_path\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m     91\u001b[0m \u001b[43m    \u001b[49m\u001b[43mchallenge\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mconfigs\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mchallenge\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m     92\u001b[0m \u001b[43m    \u001b[49m\u001b[43mtrain_transform\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mtrain_transform\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m     93\u001b[0m \u001b[43m    \u001b[49m\u001b[43mval_transform\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mval_transform\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m     94\u001b[0m \u001b[43m    \u001b[49m\u001b[43mtest_transform\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mtest_transform\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m     95\u001b[0m \u001b[43m    \u001b[49m\u001b[43mtest_path\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;28;43;01mNone\u001b[39;49;00m\u001b[43m,\u001b[49m\n\u001b[1;32m     96\u001b[0m \u001b[43m    \u001b[49m\u001b[43mbatch_size\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mconfigs\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mbatch_size\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m     97\u001b[0m \u001b[43m    \u001b[49m\u001b[43mnum_workers\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;241;43m10\u001b[39;49m\u001b[43m,\u001b[49m\n\u001b[1;32m     98\u001b[0m \u001b[43m    \u001b[49m\u001b[43monly_annotated\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mconfigs\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43monly_annotated\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m]\u001b[49m\n\u001b[1;32m     99\u001b[0m \u001b[43m)\u001b[49m\n\u001b[1;32m    101\u001b[0m \u001b[38;5;66;03m# create a model\u001b[39;00m\n\u001b[1;32m    102\u001b[0m model \u001b[38;5;241m=\u001b[39m UnetModule(\n\u001b[1;32m    103\u001b[0m     in_chans\u001b[38;5;241m=\u001b[39mconfigs[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124min_chans\u001b[39m\u001b[38;5;124m'\u001b[39m],\n\u001b[1;32m    104\u001b[0m     out_chans\u001b[38;5;241m=\u001b[39mconfigs[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mout_chans\u001b[39m\u001b[38;5;124m'\u001b[39m],\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m    115\u001b[0m     use_roi\u001b[38;5;241m=\u001b[39mconfigs[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124muse_roi\u001b[39m\u001b[38;5;124m'\u001b[39m],\n\u001b[1;32m    116\u001b[0m )\n",
-      "\u001b[0;31mTypeError\u001b[0m: FastMriDataModule.__init__() got an unexpected keyword argument 'only_annotated'"
+      "Global seed set to 42\n",
+      "GPU available: True (mps), used: True\n",
+      "TPU available: False, using: 0 TPU cores\n",
+      "IPU available: False, using: 0 IPUs\n",
+      "HPU available: False, using: 0 HPUs\n"
      ]
     }
    ],
    "source": [
     "path_config = pathlib.Path(\"fastmri_dirs.yaml\")\n",
     "\n",
-    "version_name = \"unet_annot_only\" # one of \"unet\", \"unet_attn\", \"unet_ssim\", \"unet_attn_ssim\"\n",
-    "\n",
+    "version_name = \"unet_roi_annot_only\" # one of \"unet\", \"unet_attn\", \"unet_ssim\", \"unet_attn_ssim\"\n",
     "\n",
     "only_annotated = False\n",
     "if version_name == \"unet\":\n",
@@ -225,134 +217,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "\n",
-      "  | Name             | Type                 | Params\n",
-      "----------------------------------------------------------\n",
-      "0 | NMSE             | DistributedMetricSum | 0     \n",
-      "1 | SSIM             | DistributedMetricSum | 0     \n",
-      "2 | PSNR             | DistributedMetricSum | 0     \n",
-      "3 | ValLoss          | DistributedMetricSum | 0     \n",
-      "4 | TotExamples      | DistributedMetricSum | 0     \n",
-      "5 | TotSliceExamples | DistributedMetricSum | 0     \n",
-      "6 | unet             | Unet                 | 7.8 M \n",
-      "----------------------------------------------------------\n",
-      "7.8 M     Trainable params\n",
-      "0         Non-trainable params\n",
-      "7.8 M     Total params\n",
-      "31.377    Total estimated model params size (MB)\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "3a9a0e2092624e74a0fb39f51aa69cd6",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Sanity Checking: 0it [00:00, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c8b903fec87247b19be48556916aa217",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Training: 0it [00:00, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "8e029904aa304825a1e347b197ab7113",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Validation: 0it [00:00, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Epoch 0, global step 34742: 'validation_loss' reached 0.31100 (best 0.31100), saving model to 'logs/unet/unet_attn_l1_attn/checkpoints/epoch=0-step=34742.ckpt' as top 1\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "2b65c63b8a8c4cc5931621faf6e3f468",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Validation: 0it [00:00, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Epoch 1, global step 69484: 'validation_loss' reached 0.30960 (best 0.30960), saving model to 'logs/unet/unet_attn_l1_attn/checkpoints/epoch=1-step=69484.ckpt' as top 1\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "4ad25dfb82be42f5a0d04093369327fa",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Validation: 0it [00:00, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Epoch 2, global step 104226: 'validation_loss' was not in top 1\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "5c2bf95cfe6f40dfa6ef905a45493da9",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Validation: 0it [00:00, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Epoch 3, global step 138968: 'validation_loss' reached 0.30938 (best 0.30938), saving model to 'logs/unet/unet_attn_l1_attn/checkpoints/epoch=3-step=138968.ckpt' as top 1\n",
-      "/Users/lsantos/Projects/fastMRI/.venv/lib/python3.10/site-packages/pytorch_lightning/trainer/call.py:48: UserWarning: Detected KeyboardInterrupt, attempting graceful shutdown...\n",
+      "/Users/abaraldo/Documents/GitHub/fastMRI/venv/lib/python3.10/site-packages/pytorch_lightning/trainer/call.py:48: UserWarning: Detected KeyboardInterrupt, attempting graceful shutdown...\n",
       "  rank_zero_warn(\"Detected KeyboardInterrupt, attempting graceful shutdown...\")\n"
      ]
     }
@@ -360,6 +225,20 @@
    "source": [
     "trainer.fit(model, datamodule=data_module)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -3908,7 +3787,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.13"
+   "version": "3.10.10"
   }
  },
  "nbformat": 4,
