--- a/model.ipynb
+++ b/model.ipynb
@@ -107,7 +107,7 @@
     "    # chans=256,\n",
     "    num_pool_layers=4,\n",
     "    drop_prob=0.0,\n",
-    "    lr=0.01,\n",
+    "    lr=0.001,\n",
     "    lr_step_size=40,\n",
     "    lr_gamma=0.1,\n",
     "    weight_decay=0.0,\n",
@@ -217,14 +217,50 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/Users/abaraldo/Documents/GitHub/fastMRI/venv/lib/python3.10/site-packages/pytorch_lightning/trainer/call.py:48: UserWarning: Detected KeyboardInterrupt, attempting graceful shutdown...\n",
-      "  rank_zero_warn(\"Detected KeyboardInterrupt, attempting graceful shutdown...\")\n"
+      "/Users/abaraldo/Documents/GitHub/fastMRI/venv/lib/python3.10/site-packages/pytorch_lightning/callbacks/model_checkpoint.py:612: UserWarning: Checkpoint directory logs/unet/unet_roi_annot_only_l1_roi_annot/checkpoints exists and is not empty.\n",
+      "  rank_zero_warn(f\"Checkpoint directory {dirpath} exists and is not empty.\")\n",
+      "\n",
+      "  | Name             | Type                 | Params\n",
+      "----------------------------------------------------------\n",
+      "0 | NMSE             | DistributedMetricSum | 0     \n",
+      "1 | SSIM             | DistributedMetricSum | 0     \n",
+      "2 | PSNR             | DistributedMetricSum | 0     \n",
+      "3 | ValLoss          | DistributedMetricSum | 0     \n",
+      "4 | TotExamples      | DistributedMetricSum | 0     \n",
+      "5 | TotSliceExamples | DistributedMetricSum | 0     \n",
+      "6 | unet             | Unet                 | 7.8 M \n",
+      "----------------------------------------------------------\n",
+      "7.8 M     Trainable params\n",
+      "0         Non-trainable params\n",
+      "7.8 M     Total params\n",
+      "31.024    Total estimated model params size (MB)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 0:  15%|█▌        | 1465/9581 [02:27<13:39,  9.90it/s, loss=0.291, v_num=5]"
      ]
     }
    ],
    "source": [
     "trainer.fit(model, datamodule=data_module)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
