--- a/model.ipynb
+++ b/model.ipynb
@@ -47,7 +47,8 @@
    "source": [
     "path_config = pathlib.Path(\"fastmri_dirs.yaml\")\n",
     "\n",
-    "version_name = \"unet_roi_annot_only\" # one of \"unet\", \"unet_attn\", \"unet_ssim\", \"unet_attn_ssim\"\n",
+    "version_name = \"unet_annot_only\" # one of \"unet\", \"unet_attn\", \"unet_ssim\", \"unet_attn_ssim\"\n",
+    "\n",
     "\n",
     "only_annotated = False\n",
     "if version_name == \"unet\":\n",
@@ -217,7 +218,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/Users/abaraldo/Documents/GitHub/fastMRI/venv/lib/python3.10/site-packages/pytorch_lightning/callbacks/model_checkpoint.py:612: UserWarning: Checkpoint directory logs/unet/unet_roi_annot_only_l1_roi_annot/checkpoints exists and is not empty.\n",
+      "/Users/lsantos/Projects/fastMRI/.venv/lib/python3.10/site-packages/pytorch_lightning/callbacks/model_checkpoint.py:612: UserWarning: Checkpoint directory logs/unet/unet_annot_only_l1_annot/checkpoints exists and is not empty.\n",
       "  rank_zero_warn(f\"Checkpoint directory {dirpath} exists and is not empty.\")\n",
       "\n",
       "  | Name             | Type                 | Params\n",
@@ -237,44 +238,248 @@
      ]
     },
     {
-     "name": "stdout",
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "1aca119dc3164fe3951d97be25e93c04",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Sanity Checking: 0it [00:00, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "3bb028bf11bb4f3e9656eef7e4c3178a",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Training: 0it [00:00, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "f14c27db1326435f88bda4dac8d15e57",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Validation: 0it [00:00, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Epoch 0:  15%|█▌        | 1465/9581 [02:27<13:39,  9.90it/s, loss=0.291, v_num=5]"
+      "Epoch 0, global step 8057: 'validation_loss' reached 0.31565 (best 0.31565), saving model to 'logs/unet/unet_annot_only_l1_annot/checkpoints/epoch=0-step=8057.ckpt' as top 1\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "434764b0e3af4993acf8898ab9bfa758",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Validation: 0it [00:00, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1, global step 16114: 'validation_loss' reached 0.30061 (best 0.30061), saving model to 'logs/unet/unet_annot_only_l1_annot/checkpoints/epoch=1-step=16114.ckpt' as top 1\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "63289b8ee16f4f498ef2f035d9ae6096",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Validation: 0it [00:00, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Epoch 2, global step 24171: 'validation_loss' reached 0.29782 (best 0.29782), saving model to 'logs/unet/unet_annot_only_l1_annot/checkpoints/epoch=2-step=24171.ckpt' as top 1\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "e617ab3894af45e4ada7cdbab606f5ba",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Validation: 0it [00:00, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Epoch 3, global step 32228: 'validation_loss' reached 0.29708 (best 0.29708), saving model to 'logs/unet/unet_annot_only_l1_annot/checkpoints/epoch=3-step=32228.ckpt' as top 1\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "7282e5113b85449fb0ace32b014e08f0",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Validation: 0it [00:00, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Epoch 4, global step 40285: 'validation_loss' reached 0.29620 (best 0.29620), saving model to 'logs/unet/unet_annot_only_l1_annot/checkpoints/epoch=4-step=40285-v1.ckpt' as top 1\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "9d640d3d2b8f4876b657e116cdb98975",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Validation: 0it [00:00, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Epoch 5, global step 48342: 'validation_loss' reached 0.29509 (best 0.29509), saving model to 'logs/unet/unet_annot_only_l1_annot/checkpoints/epoch=5-step=48342-v1.ckpt' as top 1\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "49445607c45e4fc88ea6d35ffe7c7ed0",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Validation: 0it [00:00, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Epoch 6, global step 56399: 'validation_loss' reached 0.29460 (best 0.29460), saving model to 'logs/unet/unet_annot_only_l1_annot/checkpoints/epoch=6-step=56399.ckpt' as top 1\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "34a46ddbc22048c889774f8a54f988f4",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Validation: 0it [00:00, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Epoch 7, global step 64456: 'validation_loss' was not in top 1\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "d4395afa87084fa28bd447c54c3aa641",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Validation: 0it [00:00, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Epoch 8, global step 72513: 'validation_loss' reached 0.29424 (best 0.29424), saving model to 'logs/unet/unet_annot_only_l1_annot/checkpoints/epoch=8-step=72513.ckpt' as top 1\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "e1a0a5d0fa3c40129f4e6dd70e12bd7e",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Validation: 0it [00:00, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Epoch 9, global step 80570: 'validation_loss' reached 0.29331 (best 0.29331), saving model to 'logs/unet/unet_annot_only_l1_annot/checkpoints/epoch=9-step=80570.ckpt' as top 1\n",
+      "`Trainer.fit` stopped: `max_epochs=10` reached.\n"
      ]
     }
    ],
    "source": [
     "trainer.fit(model, datamodule=data_module)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
@@ -3823,7 +4028,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.10"
+   "version": "3.10.13"
   }
  },
  "nbformat": 4,
