fix eval socorro

--- a/models_eval.ipynb
+++ b/models_eval.ipynb
@@ -62,10 +62,12 @@
     "            metrics['val_loss'] += output['val_loss'].item()\n",
     "            metrics['image_l1_loss'] += output['image_l1_loss'].item()\n",
     "            metrics['image_ssim_loss'] += output['image_ssim_loss'].item()\n",
-    "            if not (metrics['roi_l1_loss'] == 0 and metrics['roi_ssim_loss'] == 0):\n",
+    "            roi_l1_loss = output['roi_l1_loss'].item()\n",
+    "            roi_ssim_loss = output['roi_ssim_loss'].item()\n",
+    "            if not (roi_l1_loss == 0 and roi_ssim_loss == 0):\n",
     "                roi_len += 1              \n",
-    "                metrics['roi_l1_loss'] += output['roi_l1_loss']\n",
-    "                metrics['roi_ssim_loss'] += output['roi_ssim_loss']\n",
+    "                metrics['roi_l1_loss'] += roi_l1_loss\n",
+    "                metrics['roi_ssim_loss'] += roi_ssim_loss\n",
     "            metric += output['val_loss']\n",
     "    metric /= len(dataloader)\n",
     "    metrics['val_loss'] /= len(dataloader)\n",
@@ -112,6 +114,7 @@
     "    raw_sample_filter=None,\n",
     "    subsplit='knee',\n",
     "    multiple_annotation_policy='all',\n",
+    "    \n",
     ")\n",
     "\n",
     "gen = torch.Generator().manual_seed(42)\n",
